--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/CurrencyEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/CurrencyEditor.cshtml
@@ -1,4 +1,4 @@
 ﻿@model MvcEditorModel
 <div class="input-control">
-    <input type="number" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" step="0.01"/>
+    <input type="number" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" step="0.01"/>
 </div>
