--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/PasswordEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/PasswordEditor.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
 <div class="input-control password">
-    <input type="password" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" />
+    <input type="password" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" />
     <button class="btn-reveal"></button>
 </div>
