--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/DateEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/DateEditor.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcEditorModel
 <div class="input-group col-md-4">
-    <input type="date" class="form-control" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@(((DateTime)Model.Value).ToShortDateString())" />
+    <input type="date" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@(((DateTime)Model.Value).ToShortDateString())" />
 </div>
 <script type="text/javascript">
-    $('#@Model.Metadata.Property.Name').datepicker();
+    $('#@Model.Metadata.ClrName').datepicker();
 </script>
