--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/DefaultEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/DefaultEditor.cshtml
@@ -1,3 +1,3 @@
 ﻿@model MvcEditorModel
-<input type="text" class="form-control" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value"/>
-<span id="@(Model.Metadata.Property.Name)_State" class="glyphicon glyphicon-remove form-control-feedback hide"></span>
+<input type="text" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value"/>
+<span id="@(Model.Metadata.ClrName)_State" class="glyphicon glyphicon-remove form-control-feedback hide"></span>
