--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/HtmlEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/HtmlEditor.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
-<textarea class="form-control" rows="3"  id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name">@Model.Value</textarea>
+<textarea class="form-control" rows="3"  id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName">@Model.Value</textarea>
 <script type="text/javascript">
-    $('#@Model.Metadata.Property.Name').tinymce();
+    $('#@Model.Metadata.ClrName').tinymce();
 </script>
