--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/IntegerEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/IntegerEditor.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcEditorModel
-<input type="number" class="form-control" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value"/>
+<input type="number" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value"/>
 <script type="text/javascript">
-    $('#@Model.Metadata.Property.Name').change(function () {
+    $('#@Model.Metadata.ClrName').change(function () {
         var number = new Number($(this).val());
         if (isNaN(number)) {
             $(this).val(0);
