--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/PasswordEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/PasswordEditor.cshtml
@@ -1,2 +1,2 @@
 ﻿@model MvcEditorModel
-<input type="password" class="form-control" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" />
+<input type="password" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" />
