--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/BooleanEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/BooleanEditor.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MvcEditorModel
 <div class="input-control radio default-style">
     <label>
-        <input type="radio" name="@Model.Metadata.Property.Name" value="true" @Html.Raw((bool)Model.Value ? " checked=\"checked\"" : "") />
+        <input type="radio" name="@Model.Metadata.ClrName" value="true" @Html.Raw((bool)Model.Value ? " checked=\"checked\"" : "") />
         <span class="check"></span>
         Yes
     </label>
 </div>
 <div class="input-control radio default-style">
     <label>
-        <input type="radio" name="@Model.Metadata.Property.Name" value="false" @Html.Raw((bool)Model.Value ? "" : "checked=\"checked\"") />
+        <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw((bool)Model.Value ? "" : "checked=\"checked\"") />
         <span class="check"></span>
         No
     </label>
