--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/ImageEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/ImageEditor.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
 <div class="input-control file">
-    <input type="file" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" />
+    <input type="file" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" />
     <button class="btn-file"></button>
 </div>
