--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/IntegerEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/IntegerEditor.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcEditorModel
 <div class="input-control number">
-    <input type="number" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" step="1"/>
+    <input type="number" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" step="1"/>
     <button class="btn-clear"></button>
 </div>
 <script type="text/javascript">
-    $('#@Model.Metadata.Property.Name').change(function () {
+    $('#@Model.Metadata.ClrName').change(function () {
         var number = new Number($(this).val());
         if (isNaN(number)) {
             $(this).val(0);
