--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/MultilineTextEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/MultilineTextEditor.cshtml
@@ -1,4 +1,4 @@
 ﻿@model MvcEditorModel
 <div class="input-control textarea">
-    <textarea rows="3" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name">@Model.Value</textarea>
+    <textarea rows="3" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName">@Model.Value</textarea>
 </div>
