--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/PhoneNumberEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/PhoneNumberEditor.cshtml
@@ -1,4 +1,4 @@
 ﻿@model MvcEditorModel
 <div class="input-group tel">
-    <input type="tel" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" />
+    <input type="tel" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" />
 </div>
