--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/Selector.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/Selector.cshtml
@@ -1,4 +1,4 @@
-﻿@model EntityViewModel
+﻿@model IEntityViewModel
 @{
     Layout = null;
 }
@@ -42,7 +42,7 @@
                             </td>
                             @for (int b = 0; b < Model.Headers.Length; b++)
                             {
-                                <td>@EntityValueConverter.GetConverter(Model.Headers[b]).ConvertTo(Model.Headers[b].Property.GetValue(Model.Items[i]), typeof(string))</td>
+                                <td>@EntityValueConverter.GetConverter(Model.Headers[b]).ConvertTo(Model.Headers[b].GetValue(Model.Items[i]), typeof(string))</td>
                             }
                         </tr>
                     }
