--- a/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/UrlEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/MetroUICss/Views/Shared/UrlEditor.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
 <div class="input-control text">
-    <input type="url" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" />
+    <input type="url" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" />
     <button class="btn-clear"></button>
 </div>
